[package]
name = "shunter"
version = "0.1.0"
authors = ["Yilin Chen <sticnarf@gmail.com>"]

[dependencies]
futures = "0.1"
tokio-core = "0.1"
tokio-io = "0.1"
num = "0.1"
num-derive = "0.1"
tokio-dns-unofficial = "0.1"
slog = "2.0"
slog-term = "2.2"
slog-scope = "4.0"
slog-async = "2.1"
num_cpus = "1.7.0"